client/src/index.css
body {
  font-size: 1.2rem;
  font-weight: 400;
  line-height: 1.5;
font-family: "Roboto Mono", "monospace";
  color: rgba(0, 0, 0, 0.9);
  text-align: left;
  background-color: white

}
.content {
  min-height: calc(100vh - 250px);


}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  font-family:  "Roboto Slab", "serif";
  margin-bottom: 0.5rem;
  color: rgba(0, 0, 0, 0.9);
  font-weight: 600;
  line-height: 1.2;
}
a {
  color: rgba(0, 0, 0, 0.7);
  opacity: 1;

}
a:hover {

    color: rgba(0, 0, 0, 0.7);
    text-decoration-color: rgba(0, 0, 0, 0.7);
    opacity: 1;

}
.small-text {
  font-size: 1rem;
}
@media (min-width: 576px) {
  .no-ajax-nav-link {
  color: rgba(0, 0, 0, 0.5);
  padding-right: 0.5rem;
  padding-left: 0.5rem;


  }
}

